# spaceship

./: Cargo.toml  Dockerfile  LICENSE
src/: backend.rs  main.rs  post.rs
static/: style.css
templates/: base.html  error.html  index.html
